--- a/app.json
+++ b/app.json
@@ -8,9 +8,9 @@
   "stack": "container",
   "env": { 
       "SESSION_ID": {
-      "description": "your session id",
+      "description": "Ethix-MD&EJ6a86cf",
       "required": true,
-      "value": ""
+      "value": "Ethix-MD&EJ6a86cf"
     },
     "MODE": {
       "description": "mode public or self",
